refactor(configfile): move grouped config endpoints into same file
